--- a/index.html
+++ b/index.html
@@ -31,6 +31,19 @@
 
       <main>
          <section>
+            <div class="magnate">
+               <h2>Grupo Magnate:</h2>
+
+               <p class="parrafo">
+                  Grupo Magnate es una empresa mexicana capacitada y
+                  certificada en la industria de la construcción,
+                  integrada por un equipo de trabajo de alto rendimiento,
+                  nuestro enfoque principal es cubrir
+                  las necesidades de su proyecto implementando
+                  la mejor solución a sus necesidades
+                  de cimentación, acabado, perforación entre otras.
+               </p>
+            </div>
             <!-- Swiper -->
             <div class="swiper-container">
 
@@ -75,20 +88,7 @@
 
 
             <div class="empresa">
-               <h2>Grupo Magnate.</h2>
-
-               <p class="parrafo">
-                  Grupo Magnate es la empresa principal mexicana
-                  integrada por un equipo de trabajo
-                  capacitada y certificada en la industria de la
-                  construcción, nuestro enfoque principal es cubrir
-                  las necesidades de su proyecto implementando
-                  la mejor solución a sus necesidades
-                  de cimentación, acabado, perforación entre otras.
-               </p>
-
-
-               <h2>Duck-Enter.</h2>
+               <h2>Duck-Enter:</h2>
                <p class="parrafo">
                   Duck-Enter es una empresa incorporada a Grupo Magnate siendo intermediaria
                   en la cadena de subministros y socia distribuidora de productos americanos
@@ -191,10 +191,10 @@
             </div>
             <div class="so">
                <div class="sociales1">
-               <i class="fa fa-facebook-official" aria-hidden="true"></i>
-               <i class="fa fa-twitter" aria-hidden="true"></i>
-               <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-               <i class="fa fa-google-plus" aria-hidden="true"></i>
+               <i class="fa fa-facebook-official icono" aria-hidden="true"></i>
+               <i class="fa fa-twitter icono" aria-hidden="true"></i>
+               <i class="fa fa-linkedin-square icono" aria-hidden="true"></i>
+               <i class="fa fa-google-plus icono" aria-hidden="true"></i>
                </div>
             </div>
             <div class="copiright">
