--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="menuBoton"></div>
          <nav>
             <ul class="off-canvas">
-               <li class="elem">Home</li>
+               <li class="elem">Inicio</li>
                <li class="elem">Empresa</li>
                <li class="elem">Equipo</li>
                <li class="elem">Productos</li>
@@ -199,7 +199,7 @@
             </div>
             <div class="copiright">
                <!--Nombre y copyright-->
-               <i class="fa fa-copyright" aria-hidden="true"></i><span> Diseño de McB0y.</span>
+               <i class="fa fa-copyright" aria-hidden="true"></i><span>__By McB0y.</span>
             </div>
          </div>
       </footer>
