--- a/index.html
+++ b/index.html
@@ -161,10 +161,32 @@
                </div>
             </div>
 
-            <div class="socios">
-               <span>Los socios que se tienen</span>
-               <!--Todos los socios de la empresa.-->
+            <!-- La sección de socios-->
+            <div class="partner">
+               <h3>Algunos de nuestros socios.</h3>
             </div>
+            <div class="container1">
+               <div>
+                  <picture>
+                     <img src="Plugs_Scripts/Imagenes/Spiradrill.jpg" alt="Spiradrill tools"
+                     width="200px" height="100px" class="bw"/>
+                  </picture>
+               </div>
+               <div>
+                  <picture>
+                  <img src="Plugs_Scripts/Imagenes/digga.png" alt="Digga tools"
+                  width="200px" height="100px" class="bw"/>
+                  </picture>
+               </div>
+                  <div>
+                     <picture>
+                        <img src="Plugs_Scripts/Imagenes/PDS.jpg" alt="PDS Co"
+                        width="200px" height="100px" class="bw"/>
+                     </picture>
+                  </div>
+            </div>
+
+
          </section>
       </main>
 
