--- a/index.html
+++ b/index.html
@@ -191,21 +191,23 @@
       </main>
 
       <footer>
-         <Span><strong>Aquí empieza nuestro pie de página</strong></Span><br>
-
-         <div class="direccion">
-            <!--La dirección de la epresa
-            y los contactos.-->
-            <p>La dirección de la empresa</p>
-
-            <!--Google Maps API-->
-
-            <div class="container">
-               <h3 class="mapa">Mapa del sitio.</h3>
-        		  <div id='gmap' class="item"></div>
-            </div>
-
+         <div class="container">
+            <h3 class="mapa">Mapa del sitio.</h3>
+            <div id='gmap' class="item"></div>
          </div>
+
+         <div class="formulario">
+            <form id="form">
+             <input id="name" type="text" placeholder="NAME">
+             <input id="email" type="text" placeholder="E-MAIL">
+             <textarea id="message" type="text" placeholder="MESSAGE"></textarea>
+             <input id="submit" type="submit" value="Contactar.">
+            </form>
+         </div>
+
+         <!-- <div class="direccion">
+         
+         </div> -->
          <div class="social">
             <div class="sociales">
                <span>Puedes seguirnos en las redes sociales.</span>
